--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!----------------------------- start home ------------------------------->
     <section class="home pt-5 mb-4 " id="home">
         <div class="container">
-            <div class="spinner mx-auto d-none"></div>
+            <div class="loader mx-auto d-none"></div>
             <div id="show" class="row gy-4">
             </div>
         </div>
@@ -78,7 +78,7 @@
     <!----------------------------- start model ------------------------------>
     <section class="model d-none overflow-auto pb-4" id="model">
         <div class="container">
-            <div class="spinner spinner-model  mx-auto d-none"></div>
+            <div class="loader spinner-model mx-auto d-none"></div>
             <div id="show-details" class="row gy-3">
             </div>
             
