--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
     <!----------------------------- start model ------------------------------>
     <section class="model d-none overflow-auto pb-4" id="model">
         <div class="container">
-            <div class="loader spinner-model mx-auto d-none"></div>
+            <div class="spinner d-flex justify-content-center align-items-center vh-100 d-none">
+                <div class="loader mx-auto "></div>
+            </div>
             <div id="show-details" class="row gy-3">
             </div>
             
